Revert "Merge pull request #6 from JunYumoto/staging"
This reverts commit f0adbf01520f2ea299e41acb414f6ea18b5a58f9, reversing
changes made to 8b68dbe62c76c22a4156ee1eef6c88b3173f30b3.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-    <h1>はじめてのGit1</h1>
+    <h1>はじめてのGit</h1>
     <p>現場で困らないようにGitを学習していきましょう</p>
-    <p>revert test</p>
 </body>
 
 </html>
