Revert "Revert "Merge pull request #6 from JunYumoto/staging""
This reverts commit 93c75e088f4d28fef69e867962e59d6c9b30158a.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>はじめてのGit</h1>
+    <h1>はじめてのGit1</h1>
     <p>現場で困らないようにGitを学習していきましょう</p>
+    <p>revert test</p>
 </body>
 
 </html>
